--- a/skaffold.yaml
+++ b/skaffold.yaml
@@ -15,3 +15,11 @@ build:
         manual:
           - src: 'src/**/*.ts '
             dest: .
+    - image: irfanuddin/tickets
+      context: tickets
+      docker:
+        dockerfile: Dockerfile
+      sync:
+        manual:
+          - src: 'src/**/*.ts '
+            dest: .
