--- a/skaffold.yaml
+++ b/skaffold.yaml
@@ -23,3 +23,11 @@ build:
         manual:
           - src: 'src/**/*.ts '
             dest: .
+    - image: irfanuddin/orders
+      context: orders
+      docker:
+        dockerfile: Dockerfile
+      sync:
+        manual:
+          - src: 'src/**/*.ts '
+            dest: .
