--- a/orders/package.json
+++ b/orders/package.json
@@ -18,7 +18,7 @@
   "author": "irfanuddin",
   "license": "ISC",
   "dependencies": {
-    "@irftickets/common": "^1.0.7",
+    "@irftickets/common": "^1.0.8",
     "@types/cookie-session": "^2.0.44",
     "@types/express": "^4.17.17",
     "@types/jsonwebtoken": "^9.0.2",
@@ -28,6 +28,7 @@
     "express-validator": "^7.0.1",
     "jsonwebtoken": "^9.0.1",
     "mongoose": "^7.4.3",
+    "mongoose-update-if-current": "^1.4.0",
     "node-nats-streaming": "^0.3.2",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.1.6"
