Added k8s yaml for expiration service

--- a/skaffold.yaml
+++ b/skaffold.yaml
@@ -31,3 +31,11 @@ build:
         manual:
           - src: 'src/**/*.ts '
             dest: .
+    - image: irfanuddin/expiration
+      context: expiration
+      docker:
+        dockerfile: Dockerfile
+      sync:
+        manual:
+          - src: 'src/**/*.ts '
+            dest: .
