--- a/expiration/package.json
+++ b/expiration/package.json
@@ -19,6 +19,7 @@
   "license": "ISC",
   "dependencies": {
     "@irftickets/common": "^1.0.11",
+    "@types/bull": "^4.10.0",
     "bull": "^4.12.7",
     "node-nats-streaming": "^0.3.2",
     "ts-node-dev": "^2.0.0",
