--- a/payments/package.json
+++ b/payments/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "expiration",
+  "name": "payments",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -18,16 +18,28 @@
   "author": "irfanuddin",
   "license": "ISC",
   "dependencies": {
-    "@irftickets/common": "^1.0.11",
-    "@types/bull": "^4.10.0",
-    "bull": "^4.12.7",
+    "@irftickets/common": "^1.0.12",
+    "@types/cookie-session": "^2.0.44",
+    "@types/express": "^4.17.17",
+    "@types/jsonwebtoken": "^9.0.2",
+    "cookie-session": "^2.0.0",
+    "express": "^4.18.2",
+    "express-async-errors": "^3.1.1",
+    "express-validator": "^7.0.1",
+    "jsonwebtoken": "^9.0.1",
+    "mongoose": "^7.4.3",
+    "mongoose-update-if-current": "^1.4.0",
     "node-nats-streaming": "^0.3.2",
+    "stripe": "^15.7.0",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.1.6"
   },
   "devDependencies": {
     "@types/jest": "^29.5.12",
+    "@types/supertest": "^6.0.2",
     "jest": "^29.7.0",
+    "mongodb-memory-server": "^9.1.6",
+    "supertest": "^6.3.4",
     "ts-jest": "^29.1.2"
   }
 }
