--- a/skaffold.yaml
+++ b/skaffold.yaml
@@ -39,3 +39,11 @@ build:
         manual:
           - src: 'src/**/*.ts '
             dest: .
+    - image: irfanuddin/payments
+      context: payments
+      docker:
+        dockerfile: Dockerfile
+      sync:
+        manual:
+          - src: 'src/**/*.ts'
+            dest: .
